# aamsir

./: .gitignore  README.md  technical_report.tex
Task1/: Requirements.md  SystemOverview.md
Task2/: Stakeholders.md
Task2/ADRs/: ADR001-Microkernel-for-Retrieval-Engine.md  ADR002-Pipe-Filter-Ingestion.md  ADR003-Strategy-Pattern.md  ADR004-Broker-Scheduler.md
Task3/: ArchitecturalTactics.md  ImplementationPatterns.md
Task4/: .gitignore  README.md  technical_report.md
Task4/analysis/: architecture_analysis.md  benchmark_results.txt
Task4/backend/: .env.example  benchmark.py  pyproject.toml  seed.py
Task4/backend/data/sample_docs/: employee_leave_policy.txt  graduation_requirements.txt  it_security_guidelines.txt  research_funding_policy.txt  travel_reimbursement_sop.txt
Task4/backend/src/aamsir/: config.py  database.py  main.py  models.py
Task4/backend/src/aamsir/api/: routes.py
Task4/backend/src/aamsir/ingestion/: extractors.py  ocr.py  pipeline.py
Task4/backend/src/aamsir/retrieval/: agentic.py  factory.py  orchestrator.py  semantic.py  strategy.py  syntactic.py
Task4/frontend/: .env.example  package-lock.json  package.json
Task4/frontend/src/app/: globals.css  layout.tsx  page.tsx
Task4/frontend/src/app/documents/: page.tsx
Task4/frontend/src/app/settings/: page.tsx
Task4/frontend/src/components/: Sidebar.tsx
Task4/frontend/src/lib/: api.ts
